--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 <title>Виктор</title>
 </head>
-<body bgcolor="00FFFF" text="1E90FF">
+<body bgcolor="10FFFF" text="1E90FF">
 <center>
 <h1>Привет! Как дела ?</h1>
 <h2>Хорошо</h2>
-<h1>А по подробнее ?</h1>
+<h1>А по-подробнее ?</h1>
 <h2>Отлично</h2>
 </center>
 </body>
